{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 31,
  "lineage": "8f523f44-2cb3-e742-3f92-4a7a963e0aa9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:347574332054:loadbalancer/app/terraform-example-alb/d9f1fa1646455108",
            "arn_suffix": "app/terraform-example-alb/d9f1fa1646455108",
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-example-alb-2004266671.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:347574332054:loadbalancer/app/terraform-example-alb/d9f1fa1646455108",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-example-alb",
            "security_groups": [
              "sg-0c826969930be6960"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02f41e4a7d860729b"
              },
              {
                "subnet_id": "subnet-07ef7aab0a287d2e4"
              }
            ],
            "subnets": [
              "subnet-02f41e4a7d860729b",
              "subnet-07ef7aab0a287d2e4"
            ],
            "vpc_id": "vpc-092246321c1b253ee",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_vpc.my_vpc",
            "aws_security_group.alb",
            "aws_subnet.public_eu_central_1a",
            "aws_subnet.public_eu_central_1b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:347574332054:listener/app/terraform-example-alb/d9f1fa1646455108/7b89ed303d7b0394",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:347574332054:targetgroup/terraform-example-alb-target/c06e2eddb5935f9e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:347574332054:listener/app/terraform-example-alb/d9f1fa1646455108/7b89ed303d7b0394",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:347574332054:loadbalancer/app/terraform-example-alb/d9f1fa1646455108",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public_eu_central_1a",
            "aws_subnet.public_eu_central_1b",
            "aws_vpc.my_vpc",
            "aws_alb.alb",
            "aws_alb_target_group.group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:347574332054:targetgroup/terraform-example-alb-target/c06e2eddb5935f9e",
            "arn_suffix": "targetgroup/terraform-example-alb-target/c06e2eddb5935f9e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/login",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:347574332054:targetgroup/terraform-example-alb-target/c06e2eddb5935f9e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "terraform-example-alb-target",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-092246321c1b253ee"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:347574332054:internet-gateway/igw-08c225d71c3e71289",
            "id": "igw-08c225d71c3e71289",
            "owner_id": "347574332054",
            "tags": {
              "Name": "My VPC - Internet Gateway"
            },
            "tags_all": {
              "Name": "My VPC - Internet Gateway"
            },
            "vpc_id": "vpc-092246321c1b253ee"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_vpc_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:347574332054:route-table/rtb-078eaf1dcd8849c2e",
            "id": "rtb-078eaf1dcd8849c2e",
            "owner_id": "347574332054",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Local Route Table for Isolated Private Subnet"
            },
            "tags_all": {
              "Name": "Local Route Table for Isolated Private Subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-092246321c1b253ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_vpc_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:347574332054:route-table/rtb-0d37b1083617796d0",
            "id": "rtb-0d37b1083617796d0",
            "owner_id": "347574332054",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08c225d71c3e71289",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnets Route Table for My VPC"
            },
            "tags_all": {
              "Name": "Public Subnets Route Table for My VPC"
            },
            "timeouts": null,
            "vpc_id": "vpc-092246321c1b253ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_vpc_igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_vpc_eu_central_1a_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04496014c9d781205",
            "route_table_id": "rtb-078eaf1dcd8849c2e",
            "subnet_id": "subnet-0f75de1799c30c6b9"
          },
          "dependencies": [
            "aws_route_table.my_vpc_private",
            "aws_subnet.private_eu_central_1a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_vpc_eu_central_1a_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebae15710752ee61",
            "route_table_id": "rtb-0d37b1083617796d0",
            "subnet_id": "subnet-07ef7aab0a287d2e4"
          },
          "dependencies": [
            "aws_internet_gateway.my_vpc_igw",
            "aws_route_table.my_vpc_public",
            "aws_subnet.public_eu_central_1a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_vpc_eu_central_1b_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003ab285a8e3a85bf",
            "route_table_id": "rtb-078eaf1dcd8849c2e",
            "subnet_id": "subnet-0d390596c98ce3571"
          },
          "dependencies": [
            "aws_route_table.my_vpc_private",
            "aws_subnet.private_eu_central_1b",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_vpc_eu_central_1b_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5295bbe78da1b50",
            "route_table_id": "rtb-0d37b1083617796d0",
            "subnet_id": "subnet-02f41e4a7d860729b"
          },
          "dependencies": [
            "aws_internet_gateway.my_vpc_igw",
            "aws_route_table.my_vpc_public",
            "aws_subnet.public_eu_central_1b",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:347574332054:security-group/sg-0c826969930be6960",
            "description": "Terraform load balancer security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c826969930be6960",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform_alb_security_group",
            "name_prefix": "",
            "owner_id": "347574332054",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-092246321c1b253ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:347574332054:security-group/sg-01f0c1ca97d728bc5",
            "description": "Allow HTTP inbound connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01f0c1ca97d728bc5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "347574332054",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow HTTP Security Group"
            },
            "tags_all": {
              "Name": "Allow HTTP Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-092246321c1b253ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_eu_central_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:347574332054:subnet/subnet-0f75de1799c30c6b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.2.0/26",
            "id": "subnet-0f75de1799c30c6b9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "347574332054",
            "tags": {
              "Name": "Private Subnet eu_central-1a"
            },
            "tags_all": {
              "Name": "Private Subnet eu_central-1a"
            },
            "vpc_id": "vpc-092246321c1b253ee"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_eu_central_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:347574332054:subnet/subnet-0d390596c98ce3571",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.3.0/26",
            "id": "subnet-0d390596c98ce3571",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "347574332054",
            "tags": {
              "Name": "Private Subnet eu_central_1b"
            },
            "tags_all": {
              "Name": "Private Subnet eu_central_1b"
            },
            "vpc_id": "vpc-092246321c1b253ee"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_eu_central_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:347574332054:subnet/subnet-07ef7aab0a287d2e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/26",
            "id": "subnet-07ef7aab0a287d2e4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "347574332054",
            "tags": {
              "Name": "Public Subnet eu_central-1a"
            },
            "tags_all": {
              "Name": "Public Subnet eu_central-1a"
            },
            "vpc_id": "vpc-092246321c1b253ee"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_eu_central_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:347574332054:subnet/subnet-02f41e4a7d860729b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/26",
            "id": "subnet-02f41e4a7d860729b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "347574332054",
            "tags": {
              "Name": "Public Subnet eu_central_1b"
            },
            "tags_all": {
              "Name": "Public Subnet eu_central_1b"
            },
            "vpc_id": "vpc-092246321c1b253ee"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:347574332054:vpc/vpc-092246321c1b253ee",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-005d86ab035b03544",
            "default_route_table_id": "rtb-0ae5aa2dbfa2cfe99",
            "default_security_group_id": "sg-07d44c02cfcb358de",
            "dhcp_options_id": "dopt-0c8534ac9d720ab74",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-092246321c1b253ee",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ae5aa2dbfa2cfe99",
            "owner_id": "347574332054",
            "tags": {
              "Name": "My VPC"
            },
            "tags_all": {
              "Name": "My VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}